# AiSec

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  Makefile  PROJECT_PLAN_2026.md  README.md  SECURITY.md  action.yml  aisec.example.yaml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
audits/: openclaw_static_audit.py
deploy/: README.md  docker-compose.prod.yml
deploy/helm/aisec/: Chart.yaml  values.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
docs/: AGENT_HANDOFF.md  INDEX.md  agents.md  aisec-saas-positioning.md  architecture.md  blog-openclaw-security-analysis.md  case-study-openclaw-xcapit.md  frameworks.md  managed-deployment.md  managed-pilot-report-template.md  orchestai-integration-protocol.md  orchestrator-adapter-guide.md  plugin-development.md  product-strategy-2026.md  quickstart.md
docs/examples/: aisec_http_adapter.py  aisec_subprocess_adapter.py  github-actions-model-risk.yml  gitlab-model-risk.yml  mcp-workflow-risk-request.json  model-route-risk-request.json  orchestai-model-risk-request.json  orchestai-model-risk-result.json  orchestai-usecase-customer-support-rag.json  orchestai-usecase-ops-agent-mcp.json  tool-agent-risk-request.json
docs/schemas/: model-risk-request.schema.json  model-risk-result.schema.json
scripts/: capture-managed-evidence.sh  rehearse-managed-pilot.sh  smoke-managed-api.sh
src/aisec/: __init__.py  __main__.py
src/aisec/agents/: adversarial.py  agent_memory.py  agentic_review.py  api_security.py  base.py  cascade.py  cicd_pipeline.py  crypto.py  data_lineage.py  dataflow.py  deep_dependency.py  dependency_audit.py  output.py  (+29 more)
tests/: conftest.py
tests/integration/: test_docker_manager.py  test_full_scan.py
tests/unit/: test_adversarial_agent.py  test_agentic_review_correlation.py  test_api_refactor.py  test_audit.py  test_cascade_agent.py  test_ci_model_risk_examples.py  test_cli_agents.py  test_cli_scan_commands.py  test_cloud_storage.py  test_compliance.py  test_compliance_q4.py  test_config.py  test_correlation.py  test_correlation_v17.py  test_crypto.py  test_crypto_agent.py  test_csv_renderer.py  test_dashboard.py  test_dataflow_agent.py  test_deploy_manifests.py  test_error_responses.py  test_events.py  test_falco_alert_parser.py  test_frameworks.py  test_garak_agent.py  test_guardrail_agent.py  test_health_probes.py  test_history.py  test_managed_api_smoke_script.py  test_managed_evidence_capture.py  test_managed_pilot_rehearsal.py  test_managed_pilot_report_template.py  test_md_renderer.py  test_metrics.py  test_model_evaluation_history.py  test_model_risk_api.py  test_model_risk_api_end_to_end.py  test_model_risk_api_urls.py  test_model_risk_artifacts.py  test_model_risk_evaluation.py  (+28 more)
(+135 files in other folders)
